[gd_scene load_steps=21 format=2]

[ext_resource path="res://addons/HuePicker/HuePicker.gd" type="Script" id=1]
[ext_resource path="res://addons/HuePicker/indicator.png" type="Texture" id=2]
[ext_resource path="res://addons/HuePicker/clip.gd" type="Script" id=3]
[ext_resource path="res://addons/HuePicker/slider_gradient.shader" type="Shader" id=4]
[ext_resource path="res://addons/HuePicker/checkerboard.png" type="Texture" id=5]
[ext_resource path="res://addons/HuePicker/Hue Circle.gd" type="Script" id=6]
[ext_resource path="res://addons/HuePicker/sat_val.shader" type="Shader" id=7]
[ext_resource path="res://addons/HuePicker/xor.shader" type="Shader" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 0, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = false
anti_aliasing_size = 1
_sections_unfolded = [ "Border Width", "Content Margin", "Corner Radius", "Expand Margin", "Resource" ]

[sub_resource type="Theme" id=3]

HSlider/icons/grabber = ExtResource( 2 )
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = ExtResource( 2 )
HSlider/icons/tick = null
HSlider/styles/focus = null
HSlider/styles/grabber_area = SubResource( 1 )
HSlider/styles/grabber_disabled = null
HSlider/styles/grabber_highlight = null
HSlider/styles/slider = SubResource( 2 )
_sections_unfolded = [ "ColorPicker", "ColorPicker/icons", "HSlider", "HSlider/icons", "HSlider/styles" ]

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = ExtResource( 4 )
shader_param/color1 = Color( 0, 1, 1, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ShaderMaterial" id=5]

render_priority = 0
shader = ExtResource( 4 )
shader_param/color1 = Color( 1, 0, 1, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ShaderMaterial" id=6]

render_priority = 0
shader = ExtResource( 4 )
shader_param/color1 = Color( 1, 1, 0, 1 )
shader_param/color2 = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ShaderMaterial" id=7]

render_priority = 0
shader = ExtResource( 4 )
shader_param/color1 = Color( 1, 1, 1, 0 )
shader_param/color2 = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="StyleBoxEmpty" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = false
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 2
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Anti Aliasing", "Border Width", "Shadow" ]

[sub_resource type="ShaderMaterial" id=10]

render_priority = 0
shader = ExtResource( 7 )
shader_param/hue = 0

[sub_resource type="ShaderMaterial" id=11]

render_priority = 0
shader = ExtResource( 8 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="StyleBoxFlat" id=12]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 2
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border Width", "Shadow" ]

[node name="HuePicker" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 304.0
margin_bottom = 448.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
color = Color( 1, 1, 1, 1 )
ShowClassicControls = true

[node name="ClassicControls" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -448.0
rect_min_size = Vector2( 0, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="Hider" type="Control" parent="ClassicControls" index="0"]

anchor_left = 0.0
anchor_top = 0.64286
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.99872
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="ColorPicker" type="ColorPicker" parent="ClassicControls/Hider" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = -284.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 3 )
alignment = 0
color = Color( 1, 1, 1, 1 )
edit_alpha = true
raw_mode = false
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Theme", "custom_constants", "custom_icons" ]

[node name="R_Prev" type="PanelContainer" parent="ClassicControls/Hider" index="1"]

material = SubResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -2.0
margin_right = -124.0
margin_bottom = -136.0
rect_min_size = Vector2( 164, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Mouse", "Rect" ]

[node name="G_Prev" type="PanelContainer" parent="ClassicControls/Hider" index="2"]

material = SubResource( 5 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 20.0
margin_right = -124.0
margin_bottom = -114.0
rect_min_size = Vector2( 164, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Mouse", "Rect" ]

[node name="B_Prev" type="PanelContainer" parent="ClassicControls/Hider" index="3"]

material = SubResource( 6 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 42.0
margin_right = -124.0
margin_bottom = -92.0
rect_min_size = Vector2( 164, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Mouse", "Rect" ]

[node name="TransBG" type="TextureRect" parent="ClassicControls/Hider" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 67.0
margin_right = -124.0
margin_bottom = -75.0
rect_min_size = Vector2( 164, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 2
_sections_unfolded = [ "Mouse", "Rect" ]

[node name="A_Prev" type="PanelContainer" parent="ClassicControls/Hider" index="5"]

material = SubResource( 7 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 64.0
margin_right = -124.0
margin_bottom = -70.0
rect_min_size = Vector2( 164, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Mouse", "Rect" ]

[node name="PanelContainer" type="PanelContainer" parent="ClassicControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 296.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 8 )
_sections_unfolded = [ "custom_styles" ]

[node name="Hue Circle" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 304.0
margin_bottom = 286.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="ColorRect" type="PanelContainer" parent="Hue Circle" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 77.1628
margin_top = 68.1628
margin_right = 228.163
margin_bottom = 219.163
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 9 )
_sections_unfolded = [ "Material", "Mouse", "custom_styles" ]

[node name="SatVal" type="PanelContainer" parent="Hue Circle/ColorRect" index="0"]

material = SubResource( 10 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 151.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Mouse" ]

[node name="indicator_sv" type="Sprite" parent="Hue Circle/ColorRect" index="1"]

material = SubResource( 11 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material" ]

[node name="indicator_h" type="PanelContainer" parent="Hue Circle" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 119.625
margin_top = 125.0
margin_right = 130.44
margin_bottom = 161.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 5.5, 18 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 12 )
_sections_unfolded = [ "Rect", "custom_styles" ]

[connection signal="color_changed" from="." to="." method="_on_HuePicker_color_changed"]

[connection signal="resized" from="." to="." method="_on_HuePicker_resized"]

[connection signal="color_changed" from="ClassicControls/Hider/ColorPicker" to="ClassicControls/Hider/ColorPicker" method="_on_ColorPicker_color_changed"]

[connection signal="focus_entered" from="ClassicControls/Hider/ColorPicker" to="ClassicControls/Hider/ColorPicker" method="_on_ColorPicker_focus_entered"]

[connection signal="focus_exited" from="ClassicControls/Hider/ColorPicker" to="ClassicControls/Hider/ColorPicker" method="_on_ColorPicker_focus_exited"]

[connection signal="gui_input" from="Hue Circle" to="Hue Circle" method="_on_Hue_Circle_gui_input"]


